--- a/projects/routing/package.json
+++ b/projects/routing/package.json
@@ -2,17 +2,24 @@
   "name": "ml-routing-service",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "files": [
+    "lib/src/**/*.js",
+    "lib/**/*.js.map",
+    "lib/**/*.d.ts"
+  ],
+  "scripts": {
+    "clean": "rm -Rf .nyc_output && rm -Rf coverage && rm -Rf lib",
+    "build": "npm run clean && tsc",
+    "test": "nyc mocha --require ts-node/register --ui mocha-typescript --require source-map-support/register 'test/**/*.test.ts'"
+  },
   "directories": {
     "test": "test"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "ilp-routing": "^20.0.1-beta.0"
   },
@@ -23,9 +30,36 @@
     "@types/node": "^11.11.0",
     "axios": "^0.18.0",
     "chai": "^4.2.0",
+    "codecov": "^3.2.0",
     "mocha": "^6.0.2",
+    "mocha-typescript": "^1.1.17",
+    "nyc": "^13.3.0",
     "ts-node": "^8.0.3",
     "tslint": "^5.13.1",
     "typescript": "^3.3.3333"
+  },
+  "nyc": {
+    "check-coverage": false,
+    "lines": 80,
+    "statements": 80,
+    "functions": 80,
+    "branches": 80,
+    "include": [
+      "src/**/*"
+    ],
+    "exclude": [
+      "test"
+    ],
+    "reporter": [
+      "lcov",
+      "text-summary"
+    ],
+    "extension": [
+      ".ts",
+      ".tsx"
+    ],
+    "sourceMap": true,
+    "instrument": true,
+    "all": true
   }
 }
