chore: update package.json for codecov

--- a/projects/routing/package.json
+++ b/projects/routing/package.json
@@ -48,7 +48,8 @@
       "src/**/*"
     ],
     "exclude": [
-      "test"
+      "test",
+      "src/index.ts"
     ],
     "reporter": [
       "lcov",
